--- a/laba3/style.css
+++ b/laba3/style.css
@@ -1,1 +1,25 @@
+body {
+    background: #f2f2f2;
+    font-family: Arial;
+}
 
+.form {
+    width: 400px;
+    margin: 50px auto;
+    background: white;
+    padding: 25px;
+    border-radius: 10px;
+}
+
+input, select, textarea, button {
+    width: 100%;
+    margin: 8px 0;
+    padding: 8px;
+}
+
+button {
+    background: #4CAF50;
+    color: white;
+    border: none;
+    font-size: 16px;
+}
